# nosem

./: README.md  setup.cfg
examples/: build.py  meson.build  nosem-build.py  nosem.build.py
examples/basic/: build.py  nosem-build.py  test.cpp  test.hpp
examples/conan/: nosem.build.py
examples/static_library/: nosem-build.py  nosem.build.py  test.cpp
examples/static_library/exe/: main.cpp
examples/static_library/testlib/: nosem-build.py
examples/subprojects/basic/: main.cpp  meson.build  nosem.build.py
examples/subprojects/conan/: conanfile.txt  demo.cpp  meson.build  nosem.build.py
examples/subprojects/find_library/: fmt-demo.cpp  meson.build  nosem.build.py
examples/subprojects/static_library/: meson.build
examples/subprojects/static_library/exe/: meson.build  nosem.build.py
examples/subprojects/static_library/testlib/: meson.build
examples/subprojects/testlib/: meson.build  nosem.build.py
examples/subprojects/testlib/exe/: meson.build  nosem.build.py
examples/subprojects/testlib/testlib/: meson.build  nosem.build.py
examples/subprojects/testlib_depends/: main.cpp  meson.build  nosem.build.py
nosem/: __init__.py  interpreter.py  main.py  project.py  targets.py
