[metadata]
name = nosem
version = attr: nosem.version
description = A high performance build system
author = Sylvain Garcia
author_email = garcia.6l20@gmail.com
url = https://github.com/Garcia6l20/nosem
keywords =
  nosem
  meson
  build system
  cmake
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 1 - Planning
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Build Tools
long_description = nosem is meson

[options]
packages = find:
python_requires = >= 3.8
setup_requires =
  setuptools
install_requires =
    requests
    meson; python_version >= "0.58"

[options.entry_points]
console_scripts =
  nosem = nosem.main:main

[options.packages.find]
include = nosem, nosem.*
exclude = *.data

;[tool:pytest]
;python_classes =
;python_files =
;    run_unittests.py
